chore: Fix scrollable categories list on mobile.

--- a/packages/mapsindoors-map-react/src/components/Search/Search.scss
+++ b/packages/mapsindoors-map-react/src/components/Search/Search.scss
@@ -4,8 +4,14 @@
     padding: var(--spacing-large) var(--spacing-x-small) var(--spacing-x-small) var(--spacing-x-small);
     display: grid;
     gap: var(--spacing-x-small);
-    color: var(--brand-colors-black-100);
-    grid-template-rows: var(--spacing-xxx-large) 60px 1fr;
+    height: 100%;
+    grid-auto-rows: min-content;
+
+    &__scrollable {
+        overflow: auto;
+        display: grid;
+        gap: var(--spacing-x-small);
+    }
 
     &__categories {
         display: grid;
@@ -26,9 +32,6 @@
         }
     }
 
-    &__scrollable {
-        overflow: auto;
-    }
 
     @media (min-width: $desktop-breakpoint) {
         max-height: 50vh;
